Fixed margin issues, causing tiles to wrap prematurely

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ font-size: 0;
 .content
 {
 margin: 9px;
+margin-left: 0;
 margin-right: 0;
 display: none;
 }
@@ -130,7 +131,7 @@ display: inline-block;
 vertical-align: top;
 border: solid #d0d0d0 1px;
 margin: 0px;
-margin-right: 10px;
+margin-left: 10px;
 margin-bottom: 10px;
 padding: 1px;
 font-size: 10pt;
